added basic html structure and css styles for quiz questions

--- a/assets/style.css
+++ b/assets/style.css
@@ -26,11 +26,19 @@ h1
     font-weight: 700;
 }
 
+/* list items will be displayed with numbers in descending order*/
+ol
+{
+    list-style-type: decimal;
+    display: flex;
+    flex-direction: column;
+}
+
 /* child elements of header (view high scores & time) are displayed in-line with each other */
 .header > *
 {
     display: inline-block;
-    padding: 25px;
+    padding: 20px;
 }
 
 /* timer floats to the right */
@@ -43,7 +51,7 @@ h1
 #quiz-content > *
 {
     width: 70%;
-    margin: 7% 15%;
+    margin: 3% 15%;
 }
 
 /* ADD MEDIA QUERY TO ADJUST HORIZONTAL MARGINS AT SMALL PAGE WIDTH HERE */
@@ -54,8 +62,8 @@ h1
     text-align: center;
 }
 
-/* defines margins for start menu child elements */
-#start-menu > *
+/* defines margins for child elements of quiz section blocks */
+.quiz-section-block > *
 {
     margin: 10px;
 }
@@ -63,12 +71,15 @@ h1
 /* defines display settings for quiz buttons */
 .quiz-button
 {
-    padding: 10px 20px;
+    padding: 10px 40px;
+    margin: 5px;
     border: none;
     border-radius: 12px;
     color: white;
     background-color: var(--deep-purple);
     cursor: pointer;
+    width: 300px;
+    text-align: left;
 }
 
 /* quiz buttons change colour when hovered */
@@ -76,4 +87,11 @@ h1
 {
   background-color: var(--lavender);
   transition: 0.15s;
+}
+
+/* defines alternate padding & width for start button */
+#start-button
+{
+    padding: 10px 20px;
+    width: auto;
 }
