added high score display menu

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,7 @@ Last Edited 2023/07/29
 {
     --deep-purple: #582f92;
     --lavender: #a380e5;
+    --light-lavender: #cfc3e5;
 }
 
 /* changes default font & text size */
@@ -82,22 +83,19 @@ ol
     text-align: center;
 }
 
-/* defines display settings for quiz buttons */
-.quiz-button
+/* defines default display settings for buttons */
+button
 {
-    padding: 10px 40px;
     margin: 5px;
     border: none;
     border-radius: 12px;
     color: white;
     background-color: var(--deep-purple);
     cursor: pointer;
-    width: 300px;
-    text-align: left;
 }
 
-/* quiz buttons change colour when hovered */
-.quiz-button:hover
+/* buttons change colour when hovered */
+button:hover
 {
   background-color: var(--lavender);
   transition: 0.15s;
@@ -110,15 +108,22 @@ ol
     width: auto;
 }
 
-/* defines alternate padding & width for submit score button */
-#submit-button
+.quiz-button
+{
+    padding: 10px 40px;
+    width: 300px;
+    text-align: left;
+}
+
+/* defines alternate padding & width for high score-related buttons */
+.high-score-button
 {
     padding: 3px 15px;
     width: auto;
 }
 
-/* displays enter initials message, input box, and submit button in-line with each other */
-.submit-row
+/* displays enter certain high score-related elements in-line with each other */
+.high-score-row
 {
     display: inline-block;
 }
@@ -135,8 +140,27 @@ ol
     display: none;
 }
 
-/* slightly increases margin for all done message in high score submission menu */
-#high-score-submission h1
+/* slightly increases margin for all done message at end of quiz and high scores list header */
+.high-score-header
 {
     margin-bottom: 20px;
+}
+
+/* hides high score menu content initially */
+#high-score-display-menu
+{
+    display: none;
+}
+
+/* defines display settings for high scores list */
+#high-scores-display
+{
+    background-color: var(--light-lavender);
+    padding: 10px 35px;
+}
+
+/* adds a bit of space between individual scores */
+#high-scores-display li
+{
+    margin: 10px;
 }
