--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
 ethan (average-kirigiri-enjoyer)
 SCS Boot Camp Module 4 Weekly Challenge - Code Quiz
 Created 2023/07/29
-Last Edited 2023/07/29
+Last Edited 2023/07/31
 */
 
 /* defines variables for HTML colour codes */
@@ -77,6 +77,7 @@ ol
     padding: 20px;
 }
 
+/* defines display settings for view high scores link */
 #HSLink
 {
     color: var(--deep-purple);
@@ -84,6 +85,7 @@ ol
     cursor: pointer;
 }
 
+/* high scores link changes colour when hovered */
 #HSLink:hover
 {
     color: var(--light-lavender);
@@ -140,6 +142,7 @@ button:hover
     width: auto;
 }
 
+/* defines display settings for quiz buttons */
 .quiz-button
 {
     padding: 10px 40px;
@@ -188,11 +191,13 @@ button:hover
 #high-scores-display
 {
     background-color: var(--light-lavender);
-    padding: 10px 35px;
+    padding: 10px 50px;
 }
 
 /* adds a bit of space between individual scores */
 #high-scores-display li
 {
     margin: 10px;
+    border: solid 3px var(--deep-purple);
+    word-wrap: break-word;
 }
